--- a/db-service.yml
+++ b/db-service.yml
@@ -1,4 +1,20 @@
 ---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: db-mysql-vol
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: managed-premium
+  resources:
+    requests:
+      storage: 1Gi
+
+
+
+
+---
  apiVersion: v1
  kind: Service
  metadata:
@@ -17,7 +33,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: db-server
+  name: saleor-platform-db-1
 spec:
   minReadySeconds: 10
   selector:
@@ -45,3 +61,11 @@ spec:
               value: "saleor"
             - name: POSTGRES_PASSWORD
               value: "saleor"
+          volumeMounts:
+            - mountPath: /var/lib/postgresql/data
+              name: db-mysql-vol
+      volumes:
+        - name: db-mysql-vol
+          persistentVolumeClaim:
+            claimName: db-mysql-vol
+            readOnly: false 
